# Analyzer-GPT

./: README.md  dummy_sales_data.csv  main.py  pyproject.toml
src/analyzer_gpt/agents/: code_executor_agent.py  data_analyzer_agent.py
src/analyzer_gpt/model_clients/: openai_model_client.py
src/analyzer_gpt/prompts/: data_analyzer_prompt.py
src/analyzer_gpt/streamlit/: app.py
src/analyzer_gpt/teams/: data_analyzer_team.py  team_executor.py
src/analyzer_gpt/utils/: docker_utils.py
