[project]
name = "analyzer-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.1",
    "autogen-core>=0.6.1",
    "autogen-ext[docker]>=0.6.1",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "tiktoken>=0.9.0",
]
